--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <h2 class="title">About me</h2>
                 <div class="about-content">
                     <div class="profile">
-                            <img src="Profilepic.jpeg" alt=" pf img" class="pfimg" >                                              
+                            <img src="Profilepic.jpg" alt=" pf img" class="pfimg" >                                              
                     </div>   
                     <div class="items"> 
                         <p class="p-name">Hi, my name is Neeharika Sonowal.</p>
