--- a/index.html
+++ b/index.html
@@ -258,14 +258,14 @@
             <div class="max-width">
                 <h2 class="title">Contact Me</h2>
                     <div class="row">
-                        <div class="column">
+                        <div class="column4">
                         <div class="card reveal">
                           <div class="contact-icon">
                             <i class="fas fa-map-marker-alt"></i>
                           </div>
                           <div class="info">
                             <h3>Address</h3>
-                            <span>Address, City, Country</span>
+                            <span>Guwahati, Assam</span>
                           </div>
                         </div>
                         <div class="card reveal">
@@ -287,7 +287,7 @@
                           </div>
                         </div>
                         </div>
-                    <div class="column">
+                    <div class="column5">
                       <form>
                         <label for="fname">First Name</label>
                         <input type="text" id="fname" name="firstname" placeholder="Your name..">
