--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     </head>
     <body>
 
-        <nav class="navbar" id="mynavbar">
-                <a href="#" class="split">Portfolio</a>   
+        <nav class="navbar" id="mynavbar">   
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                     <i class="fa fa-bars"></i>
                 </a>                      
@@ -288,7 +287,7 @@
                         </div>
                         </div>
                     <div class="column5">
-                      <form>
+                      <form action="https://getform.io/f/4dc2fc90-ddd8-4970-8422-68454632baeb" method="POST">
                         <label for="fname">First Name</label>
                         <input type="text" id="fname" name="firstname" placeholder="Your name..">
                         <label for="lname">Last Name</label>
@@ -306,10 +305,9 @@
         <footer>
             <div class="footer">
                 <div class="rowf">
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-instagram"></i></a>
-                <a href="#"><i class="fa fa-whatsapp"></i></a>
-                <a href="#"><i class="fa fa-github"></i></a>
+                <a href="http://www.instagram.com/shureei__"><i class="fa fa-instagram"></i></a>
+                <a href="https://twitter.com/DigiN3ko?s=09"><i class="fa fa-twitter"></i></a>
+                <a href="https://github.com/Neeharika-Sonowal"><i class="fa fa-github"></i></a>
                 </div>
                 
                 <div class="rowf">
