--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                             <div class="column1">
                                 <img src="map.png" alt=" map img" class="itemimg">
                                 <div class="p-name">Location</div>
-                                <div class="p-des">Kamakhya Gate, Guwahati, Assam<br></div>   
+                                <div class="p-des">Guwahati, Assam<br></div>   
                             </div>
                         </div>
                     </div>
